--- a/configs/data/mnist.yaml
+++ b/configs/data/mnist.yaml
@@ -1,6 +1,9 @@
 _target_: src.data.mnist_datamodule.MNISTDataModule
 data_dir: ${paths.data_dir}
-batch_size: 128 # Needs to be divisible by the number of devices (e.g., if in a distributed setup)
-train_val_test_split: [55_000, 5_000, 10_000]
-num_workers: 0
+batch_size: 128
+train_val_test_split:
+  - 55_000
+  - 5_000
+  - 10_000
+num_workers: 1
 pin_memory: False
