--- a/configs/extras/default.yaml
+++ b/configs/extras/default.yaml
@@ -1,8 +1,8 @@
 # disable python warnings if they annoy you
-ignore_warnings: False
+ignore_warnings: false
 
 # ask user for tags if none are provided in the config
-enforce_tags: True
+enforce_tags: true
 
 # pretty print config tree at the start of the run using Rich library
-print_config: True
+print_config: true
