--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -1,21 +1,30 @@
+# https://lightning.ai/docs/pytorch/stable/api_references.html#callbacks
+# this argument can be used to add a Callback or a list of them for trainer
+# callbacks run sequentially in the order defined here except ModelCheckpoint callbacks
+# which run after all others to ensure all states are saved to the checkpoints
+
 defaults:
+  - device_stats_monitor
   - early_stopping
-  - model_summary
+  - model_checkpoint
+  - rich_model_summary
   - rich_progress_bar
   - _self_
 
-model_checkpoint:
+ModelCheckpoint:
   dirpath: ${paths.output_dir}/checkpoints
-  filename: "epoch_{epoch:03d}"
-  monitor: "val/acc"
-  mode: "max"
-  save_last: True
-  auto_insert_metric_name: False
+  filename: checkpoints_{epoch:03d}
+  monitor: train_acc
+  mode: max
+  save_top_k: 2
+  every_n_epochs: 1
+  auto_insert_metric_name: false
+  enable_version_counter: true
 
-early_stopping:
-  monitor: "val/acc"
+EarlyStopping:
+  monitor: val_acc
   patience: 100
-  mode: "max"
+  mode: max
 
-model_summary:
+RichModelSummary:
   max_depth: -1
