--- a/configs/callbacks/rich_progress_bar.yaml
+++ b/configs/callbacks/rich_progress_bar.yaml
@@ -1,4 +1,6 @@
 # https://lightning.ai/docs/pytorch/latest/api/lightning.pytorch.callbacks.RichProgressBar.html
 
-rich_progress_bar:
+RichProgressBar:
   _target_: lightning.pytorch.callbacks.RichProgressBar
+  refresh_rate: 1
+  leave: true
