--- a/configs/logger/csv.yaml
+++ b/configs/logger/csv.yaml
@@ -1,8 +1,7 @@
 # csv logger built in lightning
 # https://lightning.ai/docs/pytorch/stable/api/lightning.pytorch.loggers.csv_logs.html#csv-logger
 
-csv:
+CSVLogger:
   _target_: lightning.pytorch.loggers.csv_logs.CSVLogger
-  save_dir: "${paths.output_dir}"
-  name: "csv/"
-  prefix: ""
+  save_dir: ${paths.output_dir}
+  name: csv
