--- a/configs/model/mnist.yaml
+++ b/configs/model/mnist.yaml
@@ -1,3 +1,6 @@
+# https://hydra.cc/docs/advanced/instantiate_objects/overview/
+# instantiate model recursively
+
 _target_: src.models.mnist_module.MNISTLitModule
 
 net:
@@ -22,4 +25,4 @@ scheduler:
   patience: 10
 
 # compile model for faster training with pytorch 2.0
-compile: false
+use_compile: false
