--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 
-# specify here default configuration
+# specify here default configurations
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
